@@ -248,5 +248,6 @@ PHP                                                                        NEWS
 - Fixed bug #52211 (iconv() returns part of string on error). (Felipe)
 - Fixed bug #55450 (Built in web server not accepting file uploads). (Laruence)
 - Fixed bug #55471 (ZTS build broken with dtrace). (Laruence)
+- Fixed bug #55463 (cli-server missing _SERVER[REMOTE_ADDR]). (Laruence)
 
 <<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>
